# Review

./: .env.example  .gitignore  README.md  pyproject.toml
config/: sites.yaml
scripts/: analyze_reviews.py  app_dashboard.py  debug_fetch.py  debug_login.py  parse_walmart_saved_html.py  run_full_workflow.py  run_scraper.py  save_amazon_state.py  summarize_classified_reviews.py  try_run_once.py
src/review_scraper/: __init__.py  amazon_auth.py  cli.py  config.py  models.py  pipeline.py
src/review_scraper/export/: __init__.py  excel.py
src/review_scraper/scrapers/: __init__.py  amazon.py  base.py  bestbuy.py  generic.py  registry.py  walmart.py
tests/: test_config.py
